--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://tibsar.github.io
+title: Elegant Development
+subtitle: For all your programming needs
+author: Sara Tibbetts
 simple_search: https://www.google.com/search
-description:
+description: Professional, elegant web design for the modern day
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
