--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ email: sara.tibbetts@flatironschool.com
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title.html
+permalink: /blog/:title.html
 source: source
 destination: public
 plugins: plugins
